<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">myPlanet Lite</string>
    <string name="app_name_prefix">myPlanet</string>
    <string name="app_name_suffix">Lite</string>
    <string name="app_version">Version %1$s</string>
    <string name="open_link_with">Open link with</string>
    <string name="just_once">Just once</string>
    <string name="always">Always</string>
    <string name="login_username_label">Username</string>
    <string name="login_password_label">Password</string>
    <string name="login_action">Login</string>
    <string name="login_username_error">Enter your username</string>
    <string name="login_password_error">Enter your password</string>
    <string name="login_invalid_credentials">Incorrect username or password</string>
    <string name="login_generic_error">Couldn\'t sign in. Please try again.</string>
    <string name="login_success_title">Login Successful</string>
    <string name="login_success_message">Welcome, %1$s!</string>
    <string name="logo">Logo</string>
    <string name="login_signup_prompt">Don\'t have an account?</string>
    <string name="login_signup_action">Sign Up</string>
    <string name="login_privacy_policy_prompt">Read our <font color="@color/login_primary">Privacy Policy</font></string>
    <string name="login_survey_translation_consent_title">Survey translations</string>
    <string name="login_survey_translation_consent_description">To offer you survey translations, we need your consent to process the text securely.</string>
    <string name="login_survey_translation_consent_accept">Enable translations and accept the translation privacy policy</string>
    <string name="login_survey_translation_consent_policy">Review the translation privacy policy</string>
    <string name="login_server_label">Select a server</string>
    <string name="login_server_error">Select or enter a server</string>
    <string name="login_remember_action">Remember me</string>
    <string name="server_planet_xela">Planet Xela</string>
    <string name="server_planet_guatemala">Planet Guatemala</string>
    <string name="server_planet_san_pablo">Planet San Pablo</string>
    <string name="server_planet_somalia">Planet Somalia</string>
    <string name="server_planet_learning" translatable="false">Planet Learning</string>
    <string name="server_planet_early_education">Early Education</string>
    <string name="server_planet_earth">Earth</string>
    <string name="server_planet_vi">Planet VI</string>
    <string name="server_planet_uriur">Uriur</string>
    <string name="server_configuration_title">Configure server</string>
    <string name="server_configuration_url_hint">Server address</string>
    <string name="server_configuration_name_hint">Server name</string>
    <string name="server_configuration_country_hint">Flag</string>
    <string name="server_configuration_save">Save</string>
    <string name="server_configuration_url_error">Enter a server address</string>
    <string name="server_configuration_name_error">Enter a server name</string>
    <string name="server_configuration_country_error">Select a flag</string>
    <string name="server_configuration_added">Server added to list</string>
    <string name="server_configuration_duplicate_error">The server already exists in the list</string>
    <string name="server_option_configure">Add server…</string>
    <string name="server_option_clear">Clear servers</string>
    <string name="language_selector_content_description">Select language</string>
    <string name="language_selector_title">Choose language</string>
    <string name="language_name_english">English</string>
    <string name="language_name_spanish">Español</string>
    <string name="language_name_french">Français</string>
    <string name="language_name_portuguese">Português</string>
    <string name="language_name_arabic">العربية</string>
    <string name="language_name_somali">Soomaali</string>
    <string name="language_name_nepali">नेपाली</string>
    <string name="language_name_hindi">हिन्दी</string>
    <string name="powered_by_plataformas_informaticas" translatable="false"><![CDATA[Powered by <a href="http://plataformasinformaticas.com">Plataformas Informáticas</a>]]></string>
    <string name="signup_navigate_back">Go back</string>
    <string name="signup_header_message">Complete these steps to be part of the learning community.</string>
    <string name="signup_header_title" translatable="false">Planet</string>
    <string name="signup_username_label">@string/login_username_label</string>
    <string name="signup_password_label">@string/login_password_label</string>
    <string name="signup_confirm_password_label">Confirm password</string>
    <string name="signup_first_name_label">First name</string>
    <string name="signup_middle_name_label">Middle name</string>
    <string name="signup_last_name_label">Last name</string>
    <string name="signup_language_label">Language</string>
    <string name="signup_gender_label">Gender</string>
    <string name="signup_birth_date_label">Birth date</string>
    <string name="signup_level_label">Level</string>
    <string name="signup_email_label">Email</string>
    <string name="signup_email_error_invalid">Enter a valid email address</string>
    <string name="signup_password_error_mismatch">Passwords must match</string>
    <string name="signup_password_error_length">Enter a password</string>
    <string name="signup_username_error_invalid">Enter a username that starts with a letter and uses only letters and numbers</string>
    <string name="signup_first_name_error_required">Enter your first name</string>
    <string name="signup_last_name_error_required">Enter your last name</string>
    <string name="signup_birth_date_error_required">Select your birth date</string>
    <string name="signup_gender_error_required">Select a gender option</string>
    <string name="signup_phone_label">Mobile number</string>
    <string name="signup_phone_error_invalid">Enter a valid mobile number</string>
    <string name="signup_language_error_required">Select a language</string>
    <string name="signup_level_error_required">Select a level</string>
    <string name="signup_birth_date_picker_title">Select birth date</string>
    <string name="signup_next_action">Next</string>
    <string name="signup_back_action">Back</string>
    <string name="signup_accept_action">Accept</string>
    <string name="signup_connection_checking">Checking server connection…</string>
    <string name="signup_connection_error_retry">Couldn\'t connect to the server. Tap to retry.</string>
    <string name="signup_connection_error_input">Couldn\'t connect to the server.</string>
    <string name="signup_username_checking">Checking username availability…</string>
    <string name="signup_username_error_taken">This username is already in use.</string>
    <string name="dashboard_offline_mode_only_surveys">Offline mode: only surveys, downloaded courses, and downloaded resources are available.</string>
    <string name="dashboard_learning_offline_hint">Offline mode: courses and resources are available here. Open Teams for offline surveys.</string>
    <string name="dashboard_online_mode_restored">Connection restored: all panels are enabled.</string>
    <string name="dashboard_survey_download">Download</string>
    <string name="dashboard_survey_downloaded">Downloaded</string>
    <string name="dashboard_survey_download_success">Survey saved for offline use.</string>
    <string name="dashboard_survey_download_error">Couldn\'t save the survey for offline use.</string>
    <string name="dashboard_surveys_tab_outbox">Pending</string>
    <string name="dashboard_surveys_outbox_empty">No pending submissions.</string>
    <string name="dashboard_surveys_tab_drafts">Drafts</string>
    <string name="dashboard_surveys_drafts_empty">No survey drafts.</string>
    <string name="dashboard_survey_draft_last_edited">Last edited: %1$s</string>
    <string name="dashboard_survey_draft_delete">Delete</string>
    <string name="dashboard_survey_draft_delete_confirm">Delete this draft? This action cannot be undone.</string>
    <string name="dashboard_survey_draft_exit_title">Save survey draft?</string>
    <string name="dashboard_survey_draft_exit_message">Would you like to continue editing this survey later or discard it?</string>
    <string name="dashboard_survey_draft_keep">Continue later</string>
    <string name="dashboard_survey_draft_discard">Discard</string>
    <string name="dashboard_survey_draft_not_downloaded_title">Survey not available offline</string>
    <string name="dashboard_survey_draft_not_downloaded_message">This survey isn’t downloaded on this device. To continue editing the draft, reconnect MyPlanet Lite and/or download the survey.</string>
    <string name="dashboard_survey_submission_saved_offline">Submission saved to outbox for sync.</string>
    <string name="dashboard_outbox_saved_at">Saved offline on %1$s</string>
    <string name="dashboard_settings_menu_language">Language</string>
    <string name="dashboard_settings_menu_survey_translation">Translate surveys automatically</string>
    <string name="dashboard_settings_menu_voice_batch_size">Voices per load</string>
    <string name="dashboard_avatar_content_description">User avatar</string>
    <string name="dashboard_home">Home</string>
    <string name="dashboard_profile_menu_profile">@string/profile_title</string>
    <string name="dashboard_profile_menu_teams">Select team</string>
    <string name="dashboard_profile_menu_learning">Learning</string>
    <string name="enterprises_title">Enterprises</string>
    <string name="dashboard_enterprise_tasks_complete">Complete or reopen task</string>
    <string name="dashboard_enterprise_tasks_field_title">Title</string>
    <string name="dashboard_enterprise_tasks_field_description">Description (optional)</string>
    <string name="dashboard_profile_menu_privacy_policy">Privacy policy</string>
    <string name="dashboard_profile_menu_logout">Log out</string>
    <string name="create_team_name_label">Team name</string>
    <string name="create_team_description_label">Description (optional)</string>
    <string name="create_team_public_label">Public team</string>
    <string name="dashboard_profile_name_placeholder">Your name</string>
    <string name="dashboard_profile_username_placeholder">&#64;username</string>
    <string name="dashboard_surveys_title">Surveys</string>
    <string name="create_voice_format_bold_description">Bold</string>
    <string name="create_voice_format_italic_description">Italic</string>
    <string name="create_voice_format_heading_description">Heading</string>
    <string name="create_voice_format_bullet_description">Bulleted list</string>
    <string name="create_voice_format_numbered_description">Numbered list</string>
    <string name="create_voice_format_quote_description">Quote</string>
    <string name="create_voice_format_link_description">Insert link</string>
    <string name="dashboard_courses_title">Courses</string>
    <string name="dashboard_resources_title">Resources</string>
    <string name="dashboard_resources_add_pdf">Add PDF</string>
    <string name="dashboard_resources_add_image">Add Image</string>
    <string name="dashboard_resources_add_video">Add Video</string>
    <string name="dashboard_resources_add_audio">Add Audio</string>
    <string name="dashboard_resources_take_photo">Take photo</string>
    <string name="dashboard_resources_take_video">Take video</string>
    <string name="dashboard_resources_record_audio">Record audio</string>
    <string name="dashboard_settings_menu_currency">Currency</string>
    <string name="dashboard_settings_currency_type">Currency</string>
    <string name="dashboard_settings_currency_grouping">Thousands separator</string>
    <string name="dashboard_settings_currency_decimal">Decimal separator</string>
</resources>