<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_learning"
        android:checkable="false"
        android:icon="@drawable/ic_learning_24"
        android:title="@string/dashboard_profile_menu_learning" />
    <item
        android:id="@+id/menu_profile"
        android:checkable="false"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/dashboard_profile_menu_profile" />
    <item
        android:id="@+id/menu_teams"
        android:checkable="false"
        android:icon="@drawable/ic_groups_24"
        android:title="@string/dashboard_profile_menu_teams" />
    <item
        android:id="@+id/menu_enterprises"
        android:checkable="false"
        android:icon="@drawable/ic_enterprises_24"
        android:title="@string/enterprises_title" />
    <item
        android:id="@+id/menu_privacy_policy"
        android:checkable="false"
        android:icon="@drawable/ic_privacy_policy_24"
        android:title="@string/dashboard_profile_menu_privacy_policy" />
    <item
        android:id="@+id/menu_logout"
        android:checkable="false"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/dashboard_profile_menu_logout" />
</menu>
