<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:padding="24dp">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dashboard_settings_currency_type" />
    <Spinner android:id="@+id/currencySettingsCurrency" android:layout_width="match_parent" android:layout_height="48dp" />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/dashboard_settings_currency_grouping" />
    <Spinner android:id="@+id/currencySettingsGrouping" android:layout_width="match_parent" android:layout_height="48dp" />
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:text="@string/dashboard_settings_currency_decimal" />
    <Spinner android:id="@+id/currencySettingsDecimal" android:layout_width="match_parent" android:layout_height="48dp" />
    <TextView android:id="@+id/currencySettingsPreview" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:gravity="center" android:textAppearance="?attr/textAppearanceHeadline6" />
</LinearLayout>
