<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/surveyTranslationConsentDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:fontFamily="@font/poppins_regular"
        android:text="@string/login_survey_translation_consent_description"
        android:textColor="@color/darkOle"
        android:textSize="@dimen/text_size_14sp" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/surveyTranslationConsentCheckBox"
        style="@style/Widget.MaterialComponents.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_survey_translation_consent_accept"
        android:textSize="@dimen/text_size_14sp" />

    <TextView
        android:id="@+id/surveyTranslationPolicyLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:fontFamily="@font/poppins_regular"
        android:text="@string/login_survey_translation_consent_policy"
        android:textColor="@color/login_primary"
        android:textSize="@dimen/text_size_14sp" />

</LinearLayout>
