<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingStart="24dp"
    android:paddingTop="54dp"
    android:paddingEnd="24dp"
    android:paddingBottom="16dp"
    android:gravity="center_horizontal">

    <ImageView
        android:id="@+id/drawerProfileAvatar"
        android:layout_width="@dimen/dashboard_drawer_avatar_size"
        android:layout_height="@dimen/dashboard_drawer_avatar_size"
        android:background="@drawable/avatar_placeholder_background"
        android:clipToOutline="true"
        android:contentDescription="@string/dashboard_avatar_content_description"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/drawerProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dashboard_profile_name_placeholder"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20sp" />

    <TextView
        android:id="@+id/drawerProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/dashboard_profile_username_placeholder"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/dashboard_drawer_divider" />

</LinearLayout>
