<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.ole.planet.myplanet.lite.SplashScreen"
    android:gravity="center"
    android:background="@drawable/splash_background">
    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ole_logo"/>

    <LinearLayout
        android:id="@+id/appNameContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/appNamePrefixTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.02"
            android:text="@string/app_name_prefix"
            android:textColor="@color/darkOle"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/appNameSuffixTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.02"
            android:text="@string/app_name_suffix"
            android:textColor="@color/greenOleLogo"
            android:textSize="@dimen/text_size_24sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <TextView
        android:id="@+id/appVersionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/app_version"
        android:textColor="@color/darkOle"
        android:textSize="@dimen/text_size_14sp"
        android:textStyle="bold"/>

</LinearLayout>
